--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -136,12 +136,6 @@ cursor:
 mouse:
   hide_when_typing: true
 
-  url:
-    launcher:
-      program: xdg-open
-      args: []
-    modifiers: Control
-
 mouse_bindings:
   - { mouse: Middle, action: Copy }
 
@@ -155,6 +149,18 @@ key_bindings:
   - { key: 28,      mods: Alt,    action: SpawnNewInstance }      # Alt + Enter → New instance
   - { key: 13,      mods: Alt,    action: IncreaseFontSize }      # Alt + = → Increase Font
   - { key: 12,      mods: Alt,    action: DecreaseFontSize }      # Alt + - → Decrease Font
+
+hints:
+  enabled:
+    - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+      command: xdg-open
+      post_processing: true
+      mouse:
+        enabled: true
+        mods: None
+      binding:
+        key: U
+        mods: Control|Shift
 
 debug:
   render_timer: false
