--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,6 +1,7 @@
 opacity-rule = [
     "90:class_g = 'Alacritty'",
-    "90:class_g = 'st-256color'"
+    "90:class_g = 'st-256color'",
+    "90:class_g = 'Polybar'"
 ];
 
 # Blur
