--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -85,5 +85,6 @@
 								"]c": ["wait", "markNext:git"],
 								"<<": "gitStage",
 								">>": "gitUnstage"
-	}
+  },
+  "clangd.path": "/home/akshettrj/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
 }
