--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -6,8 +6,9 @@ opacity-rule = [
 
 # Blur
 blur-background = false;
-blur-method = "kawase";
+blur-method = "dual_kawase";
 blur-strength = 3;
+experimental-backends = true;
 
 # Fading
 fading = false;
@@ -21,7 +22,7 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "opengl-swc";
+vsync = true;
 dbe = false;
 unredir-if-possible = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
@@ -33,5 +34,5 @@ invert-color-include = [ ];
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
-glx-swap-method = "undefined";
+use-damage = true;
 glx-no-rebind-pixmap = true;
