--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,90 +1,91 @@
 {
-	// Python Config
-	"python.linting.enabled": true,
+    // Python Config
+    "python.linting.enabled": true,
+    "python.linting.flake8Enabled": true,
 
-	"clangd.disableCompletion": false,
-	"clangd.semanticHighlighting": true,
+    "clangd.disableCompletion": false,
+    "clangd.semanticHighlighting": true,
 
-	// Explorer Config
-	"explorer.keyMappings.global": {
-		"i": false, // cancel default mapkey
+    // Explorer Config
+    "explorer.keyMappings.global": {
+        "i": false, // cancel default mapkey
 
-		"*": "toggleSelection",
-		"<tab>": "actionMenu",
+        "*": "toggleSelection",
+        "<tab>": "actionMenu",
 
-		"gk": ["wait", "expandablePrev"],
-		"gj": ["wait", "expandableNext"],
-		"h": ["wait", "collapse"],
-		"l": ["wait", "expandable?", "expand", "open"],
-		"J": ["wait", "toggleSelection", "normal:j"],
-		"K": ["wait", "toggleSelection", "normal:k"],
-		"gl": ["wait", "expand:recursive"],
-		"gh": ["wait", "collapse:recursive"],
-		"<2-LeftMouse>": [
-			"expandable?",
-			["expanded?", "collapse", "expand"],
-			"open"
-		],
-		"o": ["wait", "expanded?", "collapse", "expand"],
-		"<cr>": ["wait", "expandable?", "cd", "open"],
-		"e": "open",
-		"s": "open:split",
-		"E": "open:vsplit",
-		"t": "open:tab",
-		"<bs>": ["wait", "gotoParent"],
-		"gs": ["wait", "reveal:select"],
-		"il": "preview:labeling",
-		"ic": "preview:content",
-		"Il": "previewOnHover:toggle:labeling",
-		"Ic": "previewOnHover:toggle:content",
-		"II": "previewOnHover:disable",
+        "gk": ["wait", "expandablePrev"],
+        "gj": ["wait", "expandableNext"],
+        "h": ["wait", "collapse"],
+        "l": ["wait", "expandable?", "expand", "open"],
+        "J": ["wait", "toggleSelection", "normal:j"],
+        "K": ["wait", "toggleSelection", "normal:k"],
+        "gl": ["wait", "expand:recursive"],
+        "gh": ["wait", "collapse:recursive"],
+        "<2-LeftMouse>": [
+            "expandable?",
+            ["expanded?", "collapse", "expand"],
+            "open"
+        ],
+        "o": ["wait", "expanded?", "collapse", "expand"],
+        "<cr>": ["wait", "expandable?", "cd", "open"],
+        "e": "open",
+        "s": "open:split",
+        "E": "open:vsplit",
+        "t": "open:tab",
+        "<bs>": ["wait", "gotoParent"],
+        "gs": ["wait", "reveal:select"],
+        "il": "preview:labeling",
+        "ic": "preview:content",
+        "Il": "previewOnHover:toggle:labeling",
+        "Ic": "previewOnHover:toggle:content",
+        "II": "previewOnHover:disable",
 
-		"yp": "copyFilepath",
-		"yn": "copyFilename",
-		"yy": "copyFile",
-		"dd": "cutFile",
-		"p": "pasteFile",
-		"df": "delete",
-		"dF": "deleteForever",
+        "yp": "copyFilepath",
+        "yn": "copyFilename",
+        "yy": "copyFile",
+        "dd": "cutFile",
+        "p": "pasteFile",
+        "df": "delete",
+        "dF": "deleteForever",
 
-		"a": "addFile",
-		"A": "addDirectory",
-		"r": "rename",
+        "a": "addFile",
+        "A": "addDirectory",
+        "r": "rename",
 
-		"zh": "toggleHidden",
-		"g<dot>": "toggleHidden",
-		"R": "refresh",
+        "zh": "toggleHidden",
+        "g<dot>": "toggleHidden",
+        "R": "refresh",
 
-		"?": "help",
-		"q": "quit",
-		"<esc>": "esc",
-		"X": "systemExecute",
-		"gd": "listDrive",
+        "?": "help",
+        "q": "quit",
+        "<esc>": "esc",
+        "X": "systemExecute",
+        "gd": "listDrive",
 
-		"f": "search",
-		"F": "searchRecursive",
+        "f": "search",
+        "F": "searchRecursive",
 
-		"gf": "gotoSource:file",
-		"gb": "gotoSource:buffer",
+        "gf": "gotoSource:file",
+        "gb": "gotoSource:buffer",
 
-		"[[": ["wait", "sourcePrev"],
-			"]]": ["wait", "sourceNext"],
+        "[[": ["wait", "sourcePrev"],
+        "]]": ["wait", "sourceNext"],
 
-			"[i": ["wait", "indentPrev"],
-				"]i": ["wait", "indentNext"],
+        "[i": ["wait", "indentPrev"],
+        "]i": ["wait", "indentNext"],
 
-				"[m": ["wait", "markPrev:modified"],
-					"]m": ["wait", "markNext:modified"],
+        "[m": ["wait", "markPrev:modified"],
+        "]m": ["wait", "markNext:modified"],
 
-					"[d": ["wait", "markPrev:diagnosticError:diagnosticWarning"],
-						"]d": ["wait", "markNext:diagnosticError:diagnosticWarning"],
-						"[D": ["wait", "markPrev:diagnosticError"],
-							"]D": ["wait", "markNext:diagnosticError"],
+        "[d": ["wait", "markPrev:diagnosticError:diagnosticWarning"],
+        "]d": ["wait", "markNext:diagnosticError:diagnosticWarning"],
+        "[D": ["wait", "markPrev:diagnosticError"],
+        "]D": ["wait", "markNext:diagnosticError"],
 
-							"[c": ["wait", "markPrev:git"],
-								"]c": ["wait", "markNext:git"],
-								"<<": "gitStage",
-								">>": "gitUnstage"
-  },
-  "clangd.path": "/home/akshettrj/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
+        "[c": ["wait", "markPrev:git"],
+        "]c": ["wait", "markNext:git"],
+        "<<": "gitStage",
+        ">>": "gitUnstage"
+    },
+    "clangd.path": "/home/akshettrj/.config/coc/extensions/coc-clangd-data/install/12.0.0/clangd_12.0.0/bin/clangd"
 }
