changes to picom, polybar, and wallpaper script

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -38,7 +38,7 @@ width = 99%
 height = 40
 offset-x = 0.5%
 offset-y = 3
-radius = 10
+radius = 15
 
 underline-size = 3
 overline-size = 0
@@ -57,7 +57,8 @@ modules-right = mpd wifi ethernet volume battery
 
 tray-position = center
 tray-padding = 1
-tray-background = ${colors.background}
+; tray-background = ${colors.background}
+tray-background = #E01d1f21
 tray-offset-x = 0
 tray-offset-y = 0
 tray-scale = 1.0
