--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -33,7 +33,7 @@ font:
 
   normal:
     family: JetBrainsMono Nerd Font
-    style: Regular
+    style: Medium
   bold:
     family: JetBrainsMono Nerd Font
     style: Bold
@@ -56,7 +56,7 @@ font:
 #   primary:
 #     background: '#292A2B'
 #     foreground: '#E6E6E6'
-# 
+#
 #   normal:
 #     black:   '#292A2B'
 #     red:     '#FF2C6D'
