--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,14 +1,13 @@
 opacity-rule = [
     "92:class_g = 'Alacritty'",
     "90:class_g = 'st-256color'",
-    "87:class_g = 'Polybar'"
+    "87:class_g = 'Polybar'",
 ];
 
 # Blur
-blur-background = false;
-blur-method = "dual_kawase";
-blur-strength = 3;
-experimental-backends = true;
+# blur-background = true;
+# blur-method = "dual_kawase";
+# blur-strength = 3;
 
 # Fading
 fading = false;
